tests/parser/var_err7.expected
Syntax Error: line 7:
Unexpected token (TOK_KEY_END, 'end'), expected a token type of:  
  'TOK_KEY_BEGIN'
