tests/parser/var_err7.mtp
(* variable section start *)

var test: integer;

(*missing begin*)

end
.